--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -1,3 +1,12 @@
-<p>
-  cockpit works!
-</p>
+<div class="row">
+    <div class="col-xs-12">
+      <p>Add new Server or Blueprint! </p>
+      <label>Server Name</label>
+      <input type = "text" class="form-control" [(ngModel)] = "serverName"> 
+      <label>Server Content</label>
+      <input type="text" class="form-control" [(ngModel)]="serverContent">
+      <br>
+      <button class="btn btn-primary" (click)="onAddServer()" >Add Server</button>
+      <button class="btn btn-primary"(click)="onAddBlueprint()">Add Blueprint</button>
+    </div>
+  </div>
