--- a/src/app/server-element/server-element.component.html
+++ b/src/app/server-element/server-element.component.html
@@ -1,1 +1,12 @@
-<p> server elements works</p>
+
+  
+      <div class="panel panel-default"  >
+        <div class="panel panel-heading">{{Element.name}}</div>
+        <div class="panel panel-body">
+          <p>
+            <strong *ngIf="Element.type === 'server' " style ="color: red">{{Element.content}}</strong>
+            <em *ngIf="Element.type ==='blueprint'">{{Element.content}}</em> 
+          </p>
+      </div>
+    </div>
+  
