--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
     <div class="row">
       <div class="col-xs-12">
         <app-server-element *ngFor =" let serverElement of serverElements"
-        [Element]="serverElement" ></app-server-element>
+        [srvElement]="serverElement" ></app-server-element>
       </div>
     </div>
 </div>
