--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -2,11 +2,12 @@
     <div class="col-xs-12">
       <p>Add new Server or Blueprint! </p>
       <label>Server Name</label>
-      <input type = "text" class="form-control" [(ngModel)] = "serverName"> 
+      <!-- <input type = "text" class="form-control" [(ngModel)] = "serverName"> -->
+      <input type ="text" class ="form-control" #serverNameInput>
       <label>Server Content</label>
       <input type="text" class="form-control" [(ngModel)]="serverContent">
       <br>
-      <button class="btn btn-primary" (click)="onAddServer()" >Add Server</button>
-      <button class="btn btn-primary"(click)="onAddBlueprint()">Add Blueprint</button>
+      <button class="btn btn-primary" (click)="onAddServer(serverNameInput)" >Add Server</button>
+      <button class="btn btn-primary"(click)="onAddBlueprint(serverNameInput)">Add Blueprint</button>
     </div>
   </div>
