--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,22 @@
 <div class="container">
   <app-cockpit (serverCreated)="onServerAdded($event)"
   (blueprintCreated)="onBlueprintAdded($event)"></app-cockpit>
-  <hr>
+  
+  <div class="col-xs-12">
+    <br>
+      <button class="btn btn-danger" (click)="onDestroyServer()">Remove new server</button> 
+    </div>
+    <hr>
     <div class="row">
       <div class="col-xs-12">
         <app-server-element *ngFor =" let serverElement of serverElements"
-        [srvElement]="serverElement" ></app-server-element>
+        [srvElement]="serverElement">
+        
+        <p>
+            <strong *ngIf="serverElement.type === 'server' " style ="color: red">{{serverElement.content}}</strong>
+            <em *ngIf="serverElement.type ==='blueprint'">{{serverElement.content}}</em> 
+          </p></app-server-element>
       </div>
     </div>
+
 </div>
