--- a/src/app/cockpit/cockpit.component.html
+++ b/src/app/cockpit/cockpit.component.html
@@ -5,9 +5,11 @@
       <!-- <input type = "text" class="form-control" [(ngModel)] = "serverName"> -->
       <input type ="text" class ="form-control" #serverNameInput>
       <label>Server Content</label>
-      <input type="text" class="form-control" [(ngModel)]="serverContent">
+      <!-- <input type="text" class="form-control" [(ngModel)]="serverContent"> -->
+      <input type="text" class="form-control" #serverContentInput>
       <br>
       <button class="btn btn-primary" (click)="onAddServer(serverNameInput)" >Add Server</button>
       <button class="btn btn-primary"(click)="onAddBlueprint(serverNameInput)">Add Blueprint</button>
     </div>
-  </div>
+    
+  
